--- a/frontend/src/app/globals.sass
+++ b/frontend/src/app/globals.sass
@@ -1,6 +1,23 @@
+@font-face
+  font-family: Roboto
+  src: url('/frontend/public/fonts/Roboto/Roboto-Regular.ttf')
+  font-weight: 400
+
+@font-face
+  font-family: Roboto
+  src: url('/frontend/public/fonts/Roboto/Roboto-Medium.ttf')
+  font-weight: 500
+
+@font-face
+  font-family: Roboto
+  src: url('/frontend/public/fonts/Roboto/Roboto-Bold.ttf')
+  font-weight: 700
 *
   margin: 0
   padding: 0
   text-decoration: none
   color: inherit
   box-sizing: border-box
+
+body
+  font-family: 'Roboto', sans-serif
