--- a/frontend/src/components/Header/navigation.module.sass
+++ b/frontend/src/components/Header/navigation.module.sass
@@ -1,6 +1,12 @@
 .header
   background: #333333
-  padding: 25px
+  padding: 30px
+  position: sticky
+  top: 0
+  -webkit-box-shadow: 0px 18px 23px -4px rgba(0, 0, 0, 0.2)
+  -moz-box-shadow: 0px 18px 23px -4px rgba(0, 0, 0, 0.2)
+  box-shadow: 0px 18px 23px -4px rgba(0, 0, 0, 0.2)
+  z-index: 12
   &__container
     max-width: 1280px
     margin: 0 auto
