refresh bg-login

--- a/frontend/src/components/Login/login.module.sass
+++ b/frontend/src/components/Login/login.module.sass
@@ -1,7 +1,9 @@
 .wrapper
-  // width: 100%
-  // background: #ffcc00
+  width: 100%
   min-height: 100vh
+  background-position: center
+  z-index: -18
+  position: absolute
 
 .form
   display: flex
@@ -38,6 +40,7 @@
   &:hover
     background: #333333
     color: #ffcc00
+    cursor: pointer
 
 .showIcon
   position: absolute
