--- a/frontend/src/components/Profiles/style.module.sass
+++ b/frontend/src/components/Profiles/style.module.sass
@@ -7,12 +7,14 @@
   padding-left: 1.5%
   color: #fffffff0
   flex-direction: column
-  border-radius: 15px
+  border-radius: 20px
   gap: 1.95rem
   background-color: #333333ae
   position: relative
+  backdrop-filter: blur(5px)
+
   z-index: 1
-  &::after
+  &::before
     content: ""
     position: absolute
     top: 0
