add some changes in profile page

--- a/frontend/src/components/Profiles/Card/style.module.sass
+++ b/frontend/src/components/Profiles/Card/style.module.sass
@@ -1,1 +1,10 @@
-
+.cardInfo
+  display: flex
+  flex-direction: column
+  max-width: 100%
+  &__info
+    width: clamp(9.375rem, 4.6453rem + 10.8108vw, 21.875rem)
+    display: flex
+    justify-content: space-between
+    align-items: center
+    text-align: center
