--- a/frontend/src/components/Profiles/UserInfo/style.module.sass
+++ b/frontend/src/components/Profiles/UserInfo/style.module.sass
@@ -17,19 +17,26 @@
     display: flex
     flex-direction: column
     gap: 20px
+    flex-wrap: wrap
+
     >h2
       color: white
     &__block
       display: flex
       flex-direction: column
       gap: 20px
+      flex-wrap: wrap
+
 .info
   display: flex
   gap: 50px
+  flex-wrap: wrap
   &__more
     display: flex
     flex-direction: column
     gap: 10px
+    flex-wrap: wrap
+
     > span
       line-height: 5px
       color: #ffffff88
