--- a/frontend/src/components/Profiles/style.module.sass
+++ b/frontend/src/components/Profiles/style.module.sass
@@ -1,7 +1,7 @@
 .profile
   margin: 0 auto
   max-width: 90%
-  min-height: 70vh
+  min-height: 100%
   display: flex
   padding: 2.5rem
   padding-left: 1.5%
@@ -23,3 +23,6 @@
     height: 100%
     backdrop-filter: blur(5px)
     border-radius: 25px
+  &__cards
+    display: flex
+    flex-wrap: wrap
