refresh icon, background

--- a/frontend/src/components/Login/login.module.sass
+++ b/frontend/src/components/Login/login.module.sass
@@ -2,12 +2,12 @@
   width: 100%
   min-height: 100vh
   // background-position: center
-  background: #ffcc00
+  background: #a18616
   z-index: -18
   position: absolute
 
 .form
-  background: #3333337a
+  background: #33333394
   width: 450px
   display: flex
   margin: 0 auto
@@ -57,7 +57,7 @@
   top: 10px
   cursor: pointer
   right: 0
-  color: #333
+  color: #fff
 
 .label
   color: #d8cece
