--- a/frontend/src/components/Login/login.module.sass
+++ b/frontend/src/components/Login/login.module.sass
@@ -6,6 +6,20 @@
   z-index: -18
   position: absolute
 
+.form_title
+  color: #fff
+  font-weight: 700
+  position: relative
+  &::after
+    content: ''
+    position: absolute
+    background: #ffcc00
+    width: 100%
+    height: 4px
+    bottom: 0
+    top: 40px
+    left: 0
+
 .form
   background: #33333394
   width: 450px
@@ -20,6 +34,9 @@
   gap: 45px
   padding: 75px
   border-radius: 14px
+  -webkit-box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.2)
+  -moz-box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.2)
+  box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.322)
 .group
   position: relative
   margin-bottom: 45pxa
