--- a/frontend/src/components/Home/home.module.sass
+++ b/frontend/src/components/Home/home.module.sass
@@ -47,7 +47,7 @@
 
 @media screen and ( max-width: 1024px )
   .description_wrap
-    margin-top: 75px
+    // margin-top: 75px
     padding: 24px
 
 @media screen and ( max-width: 768px )
@@ -63,4 +63,4 @@
     font-size: 36px !important
   .text
     font-size: 20px !important
-    width: 300px
+    // width: 300px
