end visual profile

--- a/frontend/src/app/globals.sass
+++ b/frontend/src/app/globals.sass
@@ -18,6 +18,6 @@
   text-decoration: none
   color: inherit
   box-sizing: border-box
-
+  font-family: 'Roboto', sans-serif !important
 body
-  font-family: 'Roboto', sans-serif
+  font-family: 'Roboto', sans-serif !important
