--- a/frontend/src/components/Profiles/UserInfo/style.module.sass
+++ b/frontend/src/components/Profiles/UserInfo/style.module.sass
@@ -3,11 +3,14 @@
   flex-direction: column
   flex-wrap: wrap
   gap: 10px
+  padding: 2.5rem
 .header
   display: flex
   align-items: center
   gap: 0.5rem
   flex-wrap: wrap
+  >h4
+    font-size: clamp(0.7rem, 0.6385rem + 2vw, 1.225rem)
 .body
   display: flex
   gap: 30px
@@ -20,6 +23,7 @@
     flex-wrap: wrap
 
     >h2
+      font-size: clamp(1rem, 0.6385rem + 2vw, 1.225rem)
       color: white
     &__block
       display: flex
@@ -40,5 +44,7 @@
     > span
       line-height: 5px
       color: #ffffff88
+      font-size: clamp(0.875rem, 0.7rem + 0.4vw, 1rem)
     >h3
       color: #ffffffed
+      font-size: clamp(1rem, 0.3rem + 1.6vw, 1.2rem)
