--- a/frontend/src/components/Home/home.module.sass
+++ b/frontend/src/components/Home/home.module.sass
@@ -25,11 +25,12 @@
     color: #fff
     font-size: 48px
     // font-size: clamp(2.125rem, 1.0313rem + 3.5vw, 3rem)
-    line-height: 24px
+    // line-height: 24px
     margin-bottom: 24px
+    max-width: 840px
   .text
     padding-top: 35px
-    // width: 550px
+    width: 550px
     color: #fff
     line-height: 34px
     // font-size: 24px
