--- a/frontend/src/components/Profiles/style.module.sass
+++ b/frontend/src/components/Profiles/style.module.sass
@@ -12,6 +12,12 @@
   position: relative
   backdrop-filter: blur(5px)
   z-index: 1
+  @media (max-width: 550px)
+  .profile
+    display: flex
+    justify-content: center
+    align-items: center
+
   >h2
     text-align: center
     padding: 50px 0 0
@@ -31,8 +37,14 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-around
+    gap: 20px
 .df
   display: flex
   flex-direction: column
   justify-content: space-between
-  gap: 30px
+  gap: 100px
+.df2
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  gap: 10px
