--- a/frontend/src/app/globals.sass
+++ b/frontend/src/app/globals.sass
@@ -1,16 +1,16 @@
 @font-face
-  font-family: Roboto
-  src: url('/frontend/public/fonts/Roboto/Roboto-Regular.ttf')
+  font-family: Open Sans
+  src: url('/frontend/public/fonts/Open-Sans/OpenSans-Regular.ttf')
   font-weight: 400
 
 @font-face
-  font-family: Roboto
-  src: url('/frontend/public/fonts/Roboto/Roboto-Medium.ttf')
+  font-family: Open Sans
+  src: url('/frontend/public/fonts/Open-Sans/OpenSans-Medium.ttf')
   font-weight: 500
 
 @font-face
-  font-family: Roboto
-  src: url('/frontend/public/fonts/Roboto/Roboto-Bold.ttf')
+  font-family: Open Sans
+  src: url('/frontend/public/fonts/Open-Sans/OpenSans-Bold.ttf')
   font-weight: 700
 *
   margin: 0
@@ -18,6 +18,6 @@
   text-decoration: none
   color: inherit
   box-sizing: border-box
-  font-family: 'Roboto', sans-serif !important
+  font-family: 'Open Sans', sans-serif !important
 body
-  font-family: 'Roboto', sans-serif !important
+  font-family: 'Open Sans', sans-serif !important
