--- a/frontend/src/components/Addprofile/addprofile.module.sass
+++ b/frontend/src/components/Addprofile/addprofile.module.sass
@@ -1,4 +1,19 @@
 .sideBar
   width: 400px
-  background: #000
+  background: #ffcc00
   min-height: 100vh
+  padding: 24px
+  color: #333333
+
+.sidebar_container
+  display: flex
+
+.nav
+  display: flex
+  flex-direction: column
+  gap: 34px
+  padding-top: 65px
+  &_link
+    font-size: 17px
+    font-weight: 700
+    color: #333333
