--- a/frontend/src/components/Header/navigation.module.sass
+++ b/frontend/src/components/Header/navigation.module.sass
@@ -15,9 +15,14 @@
     align-items: center
     color: #ffcc00
     font-weight: 500
-    .logo
-      font-size: 24px
-      font-weight: 700
+    .logo_text
+      font-size: 26px
+      // font-weight: 700
     .nav_link
       font-size: 20px
       font-weight: 500
+
+.logo
+  display: flex
+  align-items: center
+  gap: 6px
