--- a/frontend/src/components/Profiles/Card/style.module.sass
+++ b/frontend/src/components/Profiles/Card/style.module.sass
@@ -32,9 +32,11 @@
   font-size: 12px
   padding: 10px 50%
   border-radius: 10px
-  color: #333333
+  color: #000
+  &:hover
+    background-color: #fc0
 .more
-  color: black
+  color: #fc0
   font-size: 12px
 .text
   text-align: center
