--- a/frontend/src/components/Profiles/style.module.sass
+++ b/frontend/src/components/Profiles/style.module.sass
@@ -5,10 +5,10 @@
   min-height: 100%
   display: flex
   padding-left: 1.5%
-  color: #fffffff0
+  color: white
   flex-direction: column
   border-radius: 20px
-  background-color: #333333ae
+  background-color: #333333ad
   position: relative
   backdrop-filter: blur(5px)
   z-index: 1
