--- a/frontend/src/components/Profiles/UserInfo/style.module.sass
+++ b/frontend/src/components/Profiles/UserInfo/style.module.sass
@@ -48,3 +48,19 @@
     >h3
       color: #ffffffed
       font-size: clamp(1rem, 0.3rem + 1.6vw, 1.2rem)
+
+.avatar
+  width: 150px
+  height: 150px
+  border-radius: 10px
+  background-color: #e0e0e0
+  overflow: hidden
+  &__img
+    width: 100%
+    height: 100%
+    object-fit: cover
+  &:hover
+    transform: scale(1.1)
+  &:focus
+    outline: none
+    box-shadow: 0 0 5px #999999
