end: profile add:functional

--- a/frontend/src/components/Profile/Card/style.module.sass
+++ b/frontend/src/components/Profile/Card/style.module.sass
@@ -25,6 +25,8 @@
   justify-content: center
   align-items: center
   gap: 100%
+  &__active
+    background: #fc0 !important
 
 .btn
   max-width: 100%
@@ -38,6 +40,8 @@
 .more
   color: #fc0
   font-size: 12px
+  &__active
+    color: #333 !important
 .text
   text-align: center
   display: flex
