add some changes, add user-photo

--- a/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
+++ b/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
@@ -7,7 +7,7 @@
 
 .sidebar_container
   display: flex
-  gap: 34px
+  gap: 65px
 
 .logout
   padding-top: 12px
@@ -46,3 +46,8 @@
       background: #333333
       color: #ffcc00
       // height: 40px
+
+.wrapper
+  margin-top: 45px
+  .title_wrap
+    text-align: center
