added some input fields

--- a/frontend/src/app/globals.sass
+++ b/frontend/src/app/globals.sass
@@ -21,3 +21,6 @@
   font-family: 'Open Sans', sans-serif !important
 body
   font-family: 'Open Sans', sans-serif !important
+
+html
+  scroll-behavior: smooth
