--- a/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
+++ b/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
@@ -3,6 +3,9 @@
   background: #ffcc00
   min-height: 100vh
   // padding: 24px
+  position: sticky
+  top: 0
+  left: 0
   color: #333333
 
 .sidebar_container
@@ -51,3 +54,74 @@
   margin-top: 45px
   .title_wrap
     text-align: center
+
+.title
+  font-size: 28px
+  font-weight: 700
+  color: #333333
+
+.userDataInputs
+  padding-top: 44px
+.input_data
+  padding-top: 45px
+  display: flex
+  gap: 25px
+  justify-content: center
+  align-items: center
+
+.input_field
+  width: 100%
+  height: max-content
+  padding: 12px
+  border: none
+  outline: none
+  border: 1px solid #ffcc00
+  border-radius: 4px
+  font-size: 17px
+
+.selects
+  display: flex
+  gap: 25px
+  padding-top: 45px
+
+.select
+  width: 100%
+  height: max-content
+  padding: 12px
+  outline: none
+  font-size: 17px
+  border: none
+  background: transparent
+  border: solid 1px #ffcc00
+
+.liveCountry
+  padding-top: 45px
+
+.title_country
+  font-size: 28px
+  margin-bottom: 34px
+
+.wrap_residence
+  display: flex
+  gap: 25px
+
+.wrap
+  padding-top: 45px
+  display: flex
+  flex-direction: column
+
+.input_field_residence
+  margin-top: 45px
+  width: 100%
+  height: max-content
+  padding: 12px
+  border: none
+  outline: none
+  border: 1px solid #ffcc00
+  border-radius: 4px
+  font-size: 17px
+
+.residence_title
+  font-size: 28px
+  font-weight: 700
+  color: #333333
