--- a/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
+++ b/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
@@ -104,7 +104,7 @@
 .wrap_residence
   display: flex
   gap: 25px
-
+  flex-wrap: wrap
 .wrap
   padding-top: 45px
   display: flex
@@ -112,7 +112,7 @@
 
 .input_field_residence
   margin-top: 45px
-  width: 100%
+  width: 20%
   height: max-content
   padding: 12px
   border: none
