add actual adress user

--- a/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
+++ b/frontend/src/components/DocsPages/AddQuestionnaire/addQuestionnaire.module.sass
@@ -103,8 +103,9 @@
 
 .wrap_residence
   display: flex
-  gap: 25px
+  gap: 15px
   flex-wrap: wrap
+  margin-bottom: 24px
 .wrap
   padding-top: 45px
   display: flex
@@ -125,3 +126,14 @@
   font-size: 28px
   font-weight: 700
   color: #333333
+
+.select_residence
+  // margin-top: 34px
+  width: 83%
+  height: max-content
+  padding: 12px
+  outline: none
+  font-size: 17px
+  border: none
+  background: transparent
+  border: solid 1px #ffcc00
