add changeHandler for input fields

--- a/frontend/src/components/DocsPages/AddQuestionnaire/ActualAddress/style.module.sass
+++ b/frontend/src/components/DocsPages/AddQuestionnaire/ActualAddress/style.module.sass
@@ -25,6 +25,7 @@
   border: 1px solid #ffcc00
   border-radius: 4px
   font-size: 17px
+  border-radius: 10px
 
 .residence_title
   font-size: 28px
@@ -32,7 +33,6 @@
   color: #333333
 
 .select_residence
-  // margin-top: 34px
   width: 83%
   height: max-content
   padding: 12px
@@ -41,3 +41,4 @@
   border: none
   background: transparent
   border: solid 1px #ffcc00
+  border-radius: 10px
