--- a/frontend/src/components/Profile/UserInfo/style.module.sass
+++ b/frontend/src/components/Profile/UserInfo/style.module.sass
@@ -24,6 +24,7 @@
 
     >h2
       font-size: clamp(1rem, 0.6385rem + 2vw, 1.225rem)
+      font-weight: 300
       color: white
     &__block
       display: flex
@@ -38,16 +39,18 @@
   &__more
     display: flex
     flex-direction: column
-    gap: 10px
+    gap: 17px
     flex-wrap: wrap
 
     > span
       line-height: 5px
       color: #ffffff88
       font-size: clamp(0.875rem, 0.7rem + 0.4vw, 1rem)
+      font-weight: 300
     >h3
       color: #ffffffed
       font-size: clamp(1rem, 0.3rem + 1.6vw, 1.2rem)
+      font-weight: 400
 
 .avatar
   width: 150px
