--- a/frontend/src/components/Profile/style.module.sass
+++ b/frontend/src/components/Profile/style.module.sass
@@ -8,7 +8,7 @@
   color: white
   flex-direction: column
   border-radius: 20px
-  background-color: #333333ad
+  background-color: #333
   position: relative
   backdrop-filter: blur(5px)
   z-index: 1
