add logo on footer and refresh some code

--- a/frontend/src/components/Footer/footer.module.sass
+++ b/frontend/src/components/Footer/footer.module.sass
@@ -9,5 +9,10 @@
     display: flex
     align-items: center
     justify-content: space-between
+    .footer_logo
+      display: flex
+      align-items: center
+      gap: 10px
+      font-size: 24px
     .footer_p
       font-size: 12px
