--- a/frontend/src/components/Header/navigation.module.sass
+++ b/frontend/src/components/Header/navigation.module.sass
@@ -26,3 +26,17 @@
   display: flex
   align-items: center
   gap: 6px
+
+.icon_translate_logout
+  display: flex
+  gap: 24px
+  // flex-direction: row-reverse
+
+.logout
+  display: flex
+  align-items: center
+  gap: 12px
+  font-size: 20px
+
+.icon_logout
+  font-size: 20px
