--- a/frontend/src/components/Login/login.module.sass
+++ b/frontend/src/components/Login/login.module.sass
@@ -1,5 +1,5 @@
 .wrapper
-  padding-top: 920px
+  padding-top: 580px
   width: 100%
   min-height: 100vh
   // background-position: center
@@ -45,6 +45,7 @@
   -webkit-box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.2)
   -moz-box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.2)
   box-shadow: 2px 13px 17px -9px rgba(34, 60, 80, 0.322)
+  z-index: 12
 .group
   position: relative
   margin-bottom: 45pxa
