--- a/frontend/src/components/Login/login.module.sass
+++ b/frontend/src/components/Login/login.module.sass
@@ -280,6 +280,11 @@
     opacity: 0
     border-radius: 50%
 
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+
 @media screen and ( max-width: 470px )
   .form
     width: 100%
